--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Porsche 911 | Official Inspired Luxury Experience</title>
-<link rel="stylesheet" href="css/style.css">
+<title>Porsche 911 | Luxury Performance</title>
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -15,28 +15,59 @@
         <a href="index.html">Home</a>
         <a href="models.html">Models</a>
         <a href="blog.html">Blog</a>
-        <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
 </header>
 
+<!-- HERO IMAGE SECTION -->
 <section class="hero">
-    <div class="hero-content">
-        <h1>Precision. Performance. Perfection.</h1>
-        <p>The Iconic 911 Series</p>
-        <a href="models.html" class="btn-red">Explore Models</a>
+    <img src="https://images.unsplash.com/photo-1502877338535-766e1452684a" alt="Porsche 911" class="hero-img">
+    <div class="hero-text">
+        <h1>Driven by Precision</h1>
+        <p>The Iconic Porsche 911 Series</p>
     </div>
 </section>
 
-<section class="intro">
-    <h2>The Evolution of Excellence</h2>
-    <p>The Porsche 911 combines rear-engine heritage with modern performance engineering.</p>
+<!-- FEATURED MODEL IMAGES -->
+<section class="featured-models">
+    <h2>911 Model Lineup</h2>
+
+    <div class="model-grid">
+
+        <div class="model-card">
+            <img src="https://images.unsplash.com/photo-1617531653332-bd46c24f2068" alt="911 Carrera">
+            <h3>911 Carrera</h3>
+        </div>
+
+        <div class="model-card highlight">
+            <img src="https://images.unsplash.com/photo-1605559424843-9e4c228d59a4" alt="911 Turbo S">
+            <h3>911 Turbo S</h3>
+        </div>
+
+        <div class="model-card">
+            <img src="https://images.unsplash.com/photo-1622473590666-18e4b32b2b75" alt="911 GT3 RS">
+            <h3>911 GT3 RS</h3>
+        </div>
+
+    </div>
+</section>
+
+<!-- IMAGE GALLERY SECTION -->
+<section class="gallery">
+    <h2>Design & Interior</h2>
+
+    <div class="gallery-grid">
+        <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888" alt="Porsche Interior">
+        <img src="https://images.unsplash.com/photo-1549921296-3b3b8b2f33b7" alt="Porsche Rear View">
+        <img src="https://images.unsplash.com/photo-1597002973843-09d6b7a7df92" alt="Porsche Side Profile">
+        <img src="https://images.unsplash.com/photo-1571607388263-1044f9ea01dd" alt="Porsche Dashboard">
+    </div>
 </section>
 
 <footer>
     <p>© 2026 Porsche 911 Experience</p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
